# serializer version: 1
# name: test_cli_help
  '''
  Usage: main [OPTIONS]
  
    ACRCloud client for SUISA reporting @ RaBe.
  
  Options:
    --output [file|email|stdout]    How to output the report  [default: file]
    --crid-mode [local|cridlib]     How to generate the identifier in the report
                                    [default: local]
    --last-month                    Generate report for the full last month,
                                    overrides --date-start and --date-end
    --date-start TEXT               The start date of the interval in format YYYY-
                                    MM-DD  [default: 2025-11-21]
    --date-end TEXT                 The end date of the interval in format YYYY-
                                    MM-DD  [default: 2025-12-21]
    --station-name TEXT             Station name, used in output and emails
                                    [default: Radio Bern RaBe]
    --station-name-short TEXT       Shortname for station as used in filenames
                                    (locally and in attachment)  [default: rabe]
    --l10n-timezone TEXT            [default: UTC]
    --l10n-locale TEXT              [default: de_CH]
    --acr-bearer-token TEXT         Bearer token for ACRCloud API access
                                    [default: (*******)]
    --acr-project-id INTEGER        Id of the project in ACRCloud  [default: 0]
    --acr-stream-id TEXT            Id of the stream in ACRCloud  [default: ""]
    --file-format [xlsx|csv]        [default: xlsx]
    --file-path TEXT                [default: ""]
    --email-sender TEXT             the sender of the email  [default: ""]
    --email-to TEXT                 the recipients of the email  [default: ""]
    --email-server TEXT             the smtp server to send the mail with
                                    [default: ""]
    --email-username TEXT           the username to logon to the smtp server
                                    (default: email_from)  [default: ""]
    --email-password TEXT           the password for the smtp server  [default:
                                    (*******)]
    --email-responsible-email TEXT  Used to hint whom to contact in the emails
                                    text.  [default: ""]
    --email-cc TEXT                 the cc recipients of the email  [default: ""]
    --email-bcc TEXT                the bcc recipients of the email  [default: ""]
    --email-subject TEXT            Template for subject of the email.
                                    
                                    Placeholders are $station_name, $year and
                                    $month.
    --email-text TEXT               Template for email text.
                                    
                                    Placeholders are $station_name, $month, $year,
                                    $previous_year, $responsible_email, and
                                    $email_footer.
    --email-footer TEXT             Footer for the Email
    --help                          Show this message and exit.
  
  '''
# ---
# name: test_get_arguments
  Settings(output=<OutputMode.file: 'file'>, crid_mode=<IdentifierMode.local: 'local'>, date=RangeSettings(last_month=False, start='2025-11-21', end='2025-12-21'), station=StationSettings(name='Radio Bern RaBe', name_short='rabe'), l10n=LocalizationSettings(timezone='UTC', locale='de_CH'), acr=ACR(bearer_token='', project_id=0, stream_id=''), file=FileSettings(format=<FileFormat.xlsx: 'xlsx'>, path=''), email=EmailSettings(sender='', to='', server='', username='', password='', responsible_email='', cc='', bcc='', subject='SUISA Sendemeldung von $station_name für $year-$month', text='\nHallo SUISA\n\nIm Anhang finden Sie die Sendemeldung von $station_name für den $month $year.\n\nDiese Sendemeldung erfolgt gemäss den Bestimmungen "Gemeinsamer Tarif S 2020 - 2024" [1] unter\nEinhaltung der Einreichefrist für den Monat $month gemäss Ziffer 45 des Tarifs.\n\nIn der Sendungsmeldung enthalten sind die unter Buchstaben G (Verzeichnisse) des Tarifs\ngenannten Programmangaben, in elektronischer Form. Die Angaben richten sich nach dem\nstandardisierten Format gemäss der "Vorlage für Sendemeldungen: Gemeinsamer Tarif S" [2]\nsowie der Abstimmung zwischen SUISA und $station_name.\n\n\nDiese Sendemeldung enthält unter anderem die unter Ziffer 34 geforderten Angaben:\n\n- Titel des Musikwerks\n- Name des Komponisten\n- Name des bzw. der Hauptinterpreten\n- Label\n- ISRC der benützten Aufnahme (sofern zusammen mit der Aufnahme vom Lieferanten der Aufnahme mitgeliefert)\n- vom Sender der Aufnahme selbst zugewiesene Identifikationsnummer\n- Sendezeit\n- Sendedauer\n\n\nAllfällige Beanstandungen oder technische Rückfragen zu dieser Sendemeldung müssen in\nschriftlicher, elektronischer Form an $responsible_email gerichtet werden.\n\nBeanstandungen müssen, gemäss Ziffer 46, bis spätestens in drei Monaten vor dem $in_three_months\nerfolgen. Anschliessend gilt die Sendemeldung für $month $year als akzeptiert und die\nTarifbestimmungen als eingehalten.\n\nKorrekt und termingerecht gemeldete Beanstandungen werden unter Berücksichtigung der\nNachfrist von 45 Tagen, gemäss Ziffer 46, bearbeitet.\n\nDiese Email und Sendemeldung wurde automatisch generiert.\n\nFreundliche Grüsse,\n$station_name\n\n[1] <https://www.suisa.ch/dam/jcr:1d82128b-8cc7-4cf0-b0ef-1890ae9d434d/GTS_2020-2024_GER.pdf>\n[2] <https://www.suisa.ch/dam/jcr:6934be98-4319-4565-8936-05007d83fd35/Vorlage_fuer_Sendemeldungen__GTS__2020-2022.xlsx>\n\n--\n$email_footer\n', footer='Email generated by <https://github.com/radiorabe/suisa_sendemeldung>'))
# ---
# name: test_get_csv
  '''
  Titel,Komponist,Interpret,Interpreten-Info,Sender,Sendedatum,Sendedauer,Sendezeit,Werkverzeichnisangaben,ISRC,Label,CD ID / Katalog-Nummer,Aufnahmedatum,Aufnahmeland,Erstveröffentlichungsdatum,Titel des Tonträgers (Albumtitel),Autor Text,Track Nummer,Genre,Programm,Bestellnummer,Marke,Label Code,EAN/GTIN,Identifikationsnummer
  
  '''
# ---
# name: test_get_csv.1
  '''
  Titel,Komponist,Interpret,Interpreten-Info,Sender,Sendedatum,Sendedauer,Sendezeit,Werkverzeichnisangaben,ISRC,Label,CD ID / Katalog-Nummer,Aufnahmedatum,Aufnahmeland,Erstveröffentlichungsdatum,Titel des Tonträgers (Albumtitel),Autor Text,Track Nummer,Genre,Programm,Bestellnummer,Marke,Label Code,EAN/GTIN,Identifikationsnummer
  Uhrenvergleich,,,,Station Name,19930301,00:01:00,13:12:00,,,,,,,,,,,,,,,,,crid://rabe.ch/v1/test
  Meme Dub,Da Composah,Da Gang,,Station Name,19930301,00:01:00,13:37:00,,DEZ650710376,,,,,,"album, but string",,,,,,,,,crid://rabe.ch/v1/test
  Bubbles,,"Mary's Surprise Act, Climmy Jiff",,Station Name,19930301,00:01:00,16:20:00,,DEZ650710376,Jane Records,,,,20221213,Da Alboom,,,,,,,,greedy-capitalist-number,crid://rabe.ch/v1/test
  ,,Artists as string not list,,Station Name,19930301,00:01:00,17:17:17,,,,,,,,,,,,,,,,,crid://rabe.ch/v1/test
  Long Playing,,,,Station Name,19930301,19:48:57,18:18:18,,,,,,,,,,,,,,,,,crid://rabe.ch/v1/test
  composer in works,Worker,,,Station Name,19930301,19:48:57,18:18:18,,,,,,,,,,,,,,,,,crid://rabe.ch/v1/test
  composer better in works,composer,same,,Station Name,19930301,19:48:57,18:18:18,,,,,,,,,,,,,,,,,crid://rabe.ch/v1/test
  
  '''
# ---
# name: test_get_csv.2
  '''
  Titel,Komponist,Interpret,Interpreten-Info,Sender,Sendedatum,Sendedauer,Sendezeit,Werkverzeichnisangaben,ISRC,Label,CD ID / Katalog-Nummer,Aufnahmedatum,Aufnahmeland,Erstveröffentlichungsdatum,Titel des Tonträgers (Albumtitel),Autor Text,Track Nummer,Genre,Programm,Bestellnummer,Marke,Label Code,EAN/GTIN,Identifikationsnummer
  Uhrenvergleich,,,,Station Name,19930301,00:01:00,13:12:00,,,,,,,,,,,,,,,,,1993-03-01T13:12:00+00:00#acrid=a1
  Meme Dub,Da Composah,Da Gang,,Station Name,19930301,00:01:00,13:37:00,,DEZ650710376,,,,,,"album, but string",,,,,,,,,1993-03-01T13:37:00+00:00#acrid=a2
  Bubbles,,"Mary's Surprise Act, Climmy Jiff",,Station Name,19930301,00:01:00,16:20:00,,DEZ650710376,Jane Records,,,,20221213,Da Alboom,,,,,,,,greedy-capitalist-number,1993-03-01T16:20:00+00:00#acrid=a3
  ,,Artists as string not list,,Station Name,19930301,00:01:00,17:17:17,,,,,,,,,,,,,,,,,1993-03-01T17:17:17+00:00#acrid=a4
  Long Playing,,,,Station Name,19930301,19:48:57,18:18:18,,,,,,,,,,,,,,,,,1993-03-01T18:18:18+00:00#acrid=a5
  composer in works,Worker,,,Station Name,19930301,19:48:57,18:18:18,,,,,,,,,,,,,,,,,1993-03-01T18:18:18+00:00#acrid=a6
  composer better in works,composer,same,,Station Name,19930301,19:48:57,18:18:18,,,,,,,,,,,,,,,,,1993-03-01T18:18:18+00:00#acrid=a6
  
  '''
# ---
# name: test_get_xlsx
  list([
    tuple(
      'Titel',
      'Komponist',
      'Interpret',
      'Interpreten-Info',
      'Sender',
      'Sendedatum',
      'Sendedauer',
      'Sendezeit',
      'Werkverzeichnisangaben',
      'ISRC',
      'Label',
      'CD ID / Katalog-Nummer',
      'Aufnahmedatum',
      'Aufnahmeland',
      'Erstveröffentlichungsdatum',
      'Titel des Tonträgers (Albumtitel)',
      'Autor Text',
      'Track Nummer',
      'Genre',
      'Programm',
      'Bestellnummer',
      'Marke',
      'Label Code',
      'EAN/GTIN',
      'Identifikationsnummer',
    ),
  ])
# ---
# name: test_get_xlsx.1
  DimensionHolder({
    'A': <ColumnDimension Instance, Attributes={'width': '8', 'customWidth': '1', 'min': '1', 'max': '1'}>,
    'B': <ColumnDimension Instance, Attributes={'width': '12', 'customWidth': '1', 'min': '2', 'max': '2'}>,
    'C': <ColumnDimension Instance, Attributes={'width': '12', 'customWidth': '1', 'min': '3', 'max': '3'}>,
    'D': <ColumnDimension Instance, Attributes={'width': '19', 'customWidth': '1', 'min': '4', 'max': '4'}>,
    'E': <ColumnDimension Instance, Attributes={'width': '9', 'customWidth': '1', 'min': '5', 'max': '5'}>,
    'F': <ColumnDimension Instance, Attributes={'width': '13', 'customWidth': '1', 'min': '6', 'max': '6'}>,
    'G': <ColumnDimension Instance, Attributes={'width': '13', 'customWidth': '1', 'min': '7', 'max': '7'}>,
    'H': <ColumnDimension Instance, Attributes={'width': '12', 'customWidth': '1', 'min': '8', 'max': '8'}>,
    'I': <ColumnDimension Instance, Attributes={'width': '25', 'customWidth': '1', 'min': '9', 'max': '9'}>,
    'J': <ColumnDimension Instance, Attributes={'width': '7', 'customWidth': '1', 'min': '10', 'max': '10'}>,
    'K': <ColumnDimension Instance, Attributes={'width': '8', 'customWidth': '1', 'min': '11', 'max': '11'}>,
    'L': <ColumnDimension Instance, Attributes={'width': '25', 'customWidth': '1', 'min': '12', 'max': '12'}>,
    'M': <ColumnDimension Instance, Attributes={'width': '16', 'customWidth': '1', 'min': '13', 'max': '13'}>,
    'N': <ColumnDimension Instance, Attributes={'width': '15', 'customWidth': '1', 'min': '14', 'max': '14'}>,
    'O': <ColumnDimension Instance, Attributes={'width': '29', 'customWidth': '1', 'min': '15', 'max': '15'}>,
    'P': <ColumnDimension Instance, Attributes={'width': '36', 'customWidth': '1', 'min': '16', 'max': '16'}>,
    'Q': <ColumnDimension Instance, Attributes={'width': '13', 'customWidth': '1', 'min': '17', 'max': '17'}>,
    'R': <ColumnDimension Instance, Attributes={'width': '15', 'customWidth': '1', 'min': '18', 'max': '18'}>,
    'S': <ColumnDimension Instance, Attributes={'width': '8', 'customWidth': '1', 'min': '19', 'max': '19'}>,
    'T': <ColumnDimension Instance, Attributes={'width': '11', 'customWidth': '1', 'min': '20', 'max': '20'}>,
    'U': <ColumnDimension Instance, Attributes={'width': '16', 'customWidth': '1', 'min': '21', 'max': '21'}>,
    'V': <ColumnDimension Instance, Attributes={'width': '8', 'customWidth': '1', 'min': '22', 'max': '22'}>,
    'W': <ColumnDimension Instance, Attributes={'width': '13', 'customWidth': '1', 'min': '23', 'max': '23'}>,
    'X': <ColumnDimension Instance, Attributes={'width': '11', 'customWidth': '1', 'min': '24', 'max': '24'}>,
    'Y': <ColumnDimension Instance, Attributes={'width': '24', 'customWidth': '1', 'min': '25', 'max': '25'}>,
  })
# ---
